--- a/Style/ContactStyle.css
+++ b/Style/ContactStyle.css
@@ -41,7 +41,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25) ;
     text-shadow: none;
 }
-.form-contacto{
+.container{
     width: 400px;
     background: aliceblue;
     padding: 30px;
@@ -51,7 +51,7 @@
     font-family: 'Open Sans', sans-serif;
     color: rgba(35, 35, 35);
 }
-.form-contacto h2{
+.form h3{
     font-size: 22px;
     margin-bottom: 20px;
     font-family: 'Open Sans', sans-serif;
