--- a/FormStyle.css
+++ b/FormStyle.css
@@ -1,4 +1,13 @@
 /* style del form 3 pasos :) */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+}
 
    /* Estilos para las pestañas */
   
@@ -7,7 +16,7 @@
   }
 
   .tab1, .tab2, .tab3 {
-    font-family: 'Times New Roman', Times, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: large;
     padding-left: 30px;
     padding-right: 30px;
@@ -30,7 +39,7 @@
    
   h1 {
       text-align: center;
-      font-family: 'Times New Roman', Times, sans-serif;
+      font-family: 'Open Sans', sans-serif;
       font-weight: 700;
       font-style: normal;
       word-spacing: 1px;
@@ -40,21 +49,22 @@
   
   fieldset {
       display: inline-block;
-      vertical-align: top;  
+      vertical-align: 5%; 
+      margin: 3%; 
       width: 40%;
       height: 25%;
       border-width: 15px;  
       border-style: none;
-      padding: 20px;
+      padding: 2%;
   }
 
-.Pres {
+/* .Pres {
     margin-left: 10%;
 }
 
 .Cons {
-    margin-left: 1%;
-}
+    margin-right: 10%;
+} */
 
   .profesional {
     display: inline-flex;
