Se agrega lógica al menú de hamburguesa del index y portfolios, se modifica JSON, se agrega como segunda solución al trabajo de las barras de navegación.

--- a/Style/style.css
+++ b/Style/style.css
@@ -162,6 +162,7 @@ header{
     color: var(--temaRosa);
     font-size: 32px;
     display: none;
+    /* margin-right: 2rem; */
 }
 .enlaces{
     display: flex;
@@ -452,7 +453,7 @@ header{
     margin-bottom: 2rem;
 }
 .imgSolucion2{
-    background-image: url(https://i.ibb.co/VvXVyDV/solucion2.png);
+    background-image: url(https://i.ibb.co/gRKYFLf/img-Solucion2.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -572,7 +573,7 @@ iframe{
         /* padding-left: 3rem; */
         padding-top: 7rem;
         padding-bottom: 1rem;
-        
+    
     }
     .encabezadoFijo{   
         transition: 0.5s ease-in-out;     
@@ -582,12 +583,36 @@ iframe{
         transition: 0.5s ease-in-out;
         height: 50px;
     }
-    .enlaces{
-        display: none;
+/* ---------Para el manú de hamburguesa---------- */
+
+    .enlacesMenu{
+        background-color: var(--casiNegro);
+        border-radius: 0.63rem;
+        padding: 3rem;
+        position:absolute; 
+        right: 0rem;
+        display:flex;
+        margin-top: 30rem;
+        flex-wrap:wrap;
+        flex-direction: column;
+        justify-content:start; ;
+        align-items:end;
+        gap: 2rem;
+        font-weight:700;
+        box-shadow: -2px 2px 8px var(--casiNegro);
+        transition: 0.3s ease-in;
+    }
+    .enlacesVisibles{
+        transform: translate(100%, 0%);
+        visibility: hidden;
+        transition: 0.3s ease-in;
     }
     .btn-menu{
         display: block;
+        cursor: pointer;
     }
+/* ----------------------- */
+
     iframe{
         transition: 0.5s ease-in-out;
         height: 225px;
