Agrego JS,CSS y clases para que el botón de menú funcione en las páginas: resumen, form3pasos y contacto.

--- a/Style/ContactStyle.css
+++ b/Style/ContactStyle.css
@@ -7,7 +7,9 @@
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
 }
-
+main{
+    min-height: 90vh;
+}
 .btn{
     display: flex;
     justify-content: space-between;
@@ -337,7 +339,8 @@ header{
         /* width: 30rem; */
         /* padding-left: 3rem; */
         padding-top: 7rem;
-        padding-bottom: 1rem;    
+        padding-bottom: 1rem;
+    
     }
     .encabezadoFijo{   
         transition: 0.5s ease-in-out;     
@@ -347,12 +350,36 @@ header{
         transition: 0.5s ease-in-out;
         height: 50px;
     }
-    .enlaces{
-        display: none;
+/* ---------Para el manú de hamburguesa---------- */
+
+    .enlacesMenu{
+        background-color: var(--casiNegro);
+        border-radius: 0.63rem;
+        padding: 3rem;
+        position:absolute; 
+        right: 0rem;
+        display:flex;
+        margin-top: 30rem;
+        flex-wrap:wrap;
+        flex-direction: column;
+        justify-content:start; ;
+        align-items:end;
+        gap: 2rem;
+        font-weight:700;
+        box-shadow: -2px 2px 8px var(--casiNegro);
+        transition: 0.3s ease-in;
+    }
+    .enlacesVisibles{
+        transform: translate(100%, 0%);
+        visibility: hidden;
+        transition: 0.3s ease-in;
     }
     .btn-menu{
         display: block;
+        cursor: pointer;
     }
+/* ----------------------- */
+
     iframe{
         transition: 0.5s ease-in-out;
         height: 225px;
