--- a/FormStyle.css
+++ b/FormStyle.css
@@ -20,7 +20,7 @@
     font-size: large;
     padding-left: 30px;
     padding-right: 30px;
-    padding-bottom: 50px;
+    padding-bottom: 250px;
     padding-top: 40px;
     margin-left: 15px;
     margin-right: 15px;
@@ -29,11 +29,11 @@
   }
 
   main{
-    height: 90vh;
+    min-height: 100vh;
   }
   body{
     width: 100vw;
-    height: 90vh;
+    /* min-height: 100vh; */
     background-color: rgb(7, 47, 105,70%);
     margin: 0;
     font-size: 16px;
@@ -272,13 +272,13 @@ footer p{
     font-size: 0.8rem;
 }
 .iconos{
-  padding-top: 3rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  gap: 1rem;
+    padding-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    gap: 1rem;
 
 }
 .iconos img{
