--- a/FormStyle.css
+++ b/FormStyle.css
@@ -428,9 +428,19 @@ header{
 }
 .containerCambioOficial :hover,
 .containerCambioBlue :hover{
-    transition: 0.5s ease-in-out;
-    filter: drop-shadow(-2px 0px 8px var(--temaRosa));
-    transform: scale(1.2);
+    transition: 0.3s ease-in-out;
+    filter: drop-shadow(-2px 0px 4px var(--temaRosa));
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    -webkit-filter: drop-shadow(-2px 0px 4px var(--temaRosa));
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -ms-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    cursor:default;
 }
 .containerTipoCotizaciones .ahora{
     text-align: center;padding-bottom: .2rem;
@@ -447,7 +457,7 @@ header{
     font-style: normal;
     font-weight: 600;
     font-size: 1.5rem;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     
 }
 .containerTipoCotizaciones p{
@@ -458,7 +468,7 @@ header{
     font-weight: 300;
     font-size: 1.2rem;
     line-height: 1.3rem;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     
 }
 .btn-rosa-cotiz{   
