--- a/Style/stylePortfolio.css
+++ b/Style/stylePortfolio.css
@@ -343,7 +343,7 @@ header{
     align-items: center;
     gap: 5rem;
     box-shadow: 0px 6px 11px 5px rgba(0, 0, 0, 0.25);
-    background-image: linear-gradient(rgba(16, 228, 204, 0.3),rgba(16, 228, 204, 0.3)), url(https://i.postimg.cc/YqNPC6Kz/img-Presentacion-Colaborador.jpg);
+    background-image: linear-gradient(rgba(16, 228, 204, 0.3),rgba(16, 228, 204, 0.3)), url(../img/imgPresentacionColaborador.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -491,7 +491,7 @@ line-height: 150%;
 }
 .imgSolucion1{
     
-    background-image: url(https://i.ibb.co/sqQ9WJ8/solucion1.png);
+    background-image: url(../img/Solucion1.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -502,7 +502,7 @@ line-height: 150%;
     margin-bottom: 2rem;
 }
 .imgSolucion2{
-    background-image: url(https://i.ibb.co/VvXVyDV/solucion2.png);
+    background-image: url(../img/solucion2.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -514,7 +514,7 @@ line-height: 150%;
     margin-bottom: 2rem;
 }
 .imgSolucion3{
-    background-image: url(https://i.ibb.co/C0ZGCHq/solucion3.jpg);
+    background-image: url(../img/solucion3.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
