--- a/Style/style.css
+++ b/Style/style.css
@@ -66,11 +66,20 @@ body::-webkit-scrollbar-thumb:hover{
     font-size: 1.2rem;
     font-weight:600;
     padding: 0.5em;
-    border-radius: 0.63rem;
+    border-radius: 3.5px;
     border: none;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
     text-shadow: none;
     text-shadow: 0 1px 10px rgb(0, 0, 0,1);
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
+    -webkit-border-radius: 3.5px;
+    -moz-border-radius: 3.5px;
+    -ms-border-radius: 3.5px;
+    -o-border-radius: 3.5px;
 }
 .btn-rosa:hover{
     transform: scale(1.1);
@@ -188,10 +197,14 @@ header{
 }
 .enlaces a:hover{
     transition: 0.5s ease-in-out;
-    /* background-color: var(--temaVerdeTransparente); */
-    filter: drop-shadow(0px 0px 15px var(--temaRosa));
+    /*background-color: var(--temaVerdeTransparente);
+    */filter: drop-shadow(0px 0px 15px var(--temaRosa));
     color: var(--casiBlanco);
     transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 .enlaces .textoNegrita{
     font-weight:700;
@@ -339,7 +352,7 @@ header{
     box-shadow: -3px 3px 7px 3px rgba(0, 0, 0, 0.25);
     border-radius: 1rem;
     color: var(--temaVerde);
-    
+    padding-bottom: 0.3rem;
 }
 .colaborador2{
     height: 33rem;
@@ -348,6 +361,7 @@ header{
     box-shadow: -3px 3px 7px 3px rgba(0, 0, 0, 0.25);
     border-radius: 1rem;
     color: var(--temaVerde);
+    padding-bottom: 0.3rem;
 }
 .colaborador3{
     height: 33rem;
@@ -356,6 +370,7 @@ header{
     box-shadow: -3px 3px 7px 3px rgba(0, 0, 0, 0.25);
     border-radius: 1rem;
     color: var(--temaVerde);
+    padding-bottom: 0.3rem;
 }
 .imgColaborador1{
     
@@ -368,6 +383,11 @@ header{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 1rem;
     margin-bottom: 2rem;
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
 }
 .imgColaborador2{
     background-image: url(../img/Colaborador2.jpg);
@@ -379,6 +399,11 @@ header{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 1rem;
     margin-bottom: 2rem;
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
 }
 .imgColaborador3{
     background-image: url(../img/Colaborador3.jpg);
@@ -390,6 +415,11 @@ header{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 1rem;
     margin-bottom: 2rem;
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
 }
 .nombreColaborador{
     
@@ -451,6 +481,11 @@ header{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 1rem;
     margin-bottom: 2rem;
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
 }
 .imgSolucion2{
     background-image: url(../img/imgSolucion2.png);
@@ -462,6 +497,11 @@ header{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 1rem;
     margin-bottom: 2rem;
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
 }
 .imgSolucion3{
     background-image: url(../img/solucion3.jpg);
@@ -473,6 +513,11 @@ header{
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 1rem;
     margin-bottom: 2rem;
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
 }
 .nombreSolucion{
     font-style: normal;
@@ -488,10 +533,9 @@ header{
     font-style: normal;
     font-weight: 500;
     font-size: 1.2rem;
-    line-height: 2rem;
+    line-height: 1.5rem;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
 /* Sección oficinas */
 
 .leyendaMapas{
