--- a/Style/style.css
+++ b/Style/style.css
@@ -201,20 +201,19 @@ header{
     font-size: 1rem;
     font-weight:lighter;
     padding: .5em;
-    /* padding: 0px; */
     border: px solid var(--temaVerde);
     border-radius: .625rem;
+    transition: .5s, color .10s;
+    -webkit-transition: .5s, color .10s;
+    -moz-transition: .5s, color .10s;
+    -ms-transition: .5s, color .10s;
+    -o-transition: .5s, color .10s;
 }
 .enlaces a:hover{
     transition: 0.5s ease-in-out;
-    /*background-color: var(--temaVerdeTransparente);
-    */filter: drop-shadow(0px 0px 15px var(--temaRosa));
+    filter: drop-shadow(0px 0px 15px var(--temaRosa));
     color: var(--casiBlanco);
     transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
 }
 .enlaces .textoNegrita{
     font-weight:700;
